# image-engineer

./: .gitignore  cli.py  pyproject.toml  readme.MD  settings.py
core/: __init__.py
core/gemini/: gemini.py
core/image_handling/: image_operations.py
core/sound_handling/: sounds.py
core/video_handling/: video_operations.py
